--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+title: James Cooper
+description: A personal website about a Computer Scientist, researcher and programmer from New Zealand
