Start customising the base template to my purposes

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 ### your site title here
 
-title: Your Name
-description: subtitle | affiliations | motto
+title: James Cooper
+description: Computer Scientist
 
-baseurl: /gradfolio #name of GitHub repository
+baseurl: / #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
-email: #
+email: jamescooper4@acm.org #
 
 
 highlighter: rouge
