--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '7' # SDK Version to use.
-      - run: dotnet run -c Release -- deploy
+      - run: dotnet run -c Release -- deploy --log-level Debug
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
