--- a/hugo.yml
+++ b/hugo.yml
@@ -146,3 +146,17 @@ markup:
     # guessSyntax: true
     # lineNos: true
     # style: monokai
+
+privacy:
+  disqus:
+    disable: true
+  googleAnalytics:
+    disable: true
+  instagram:
+    disable: true
+  twitter:
+    disable: true
+  vimeo:
+    disable: true
+  youtube:
+    disable: true
