--- a/hugo.yml
+++ b/hugo.yml
@@ -32,7 +32,7 @@ params:
   ShowShareButtons: true
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
-  ShowCodeCopyButtons: false
+  ShowCodeCopyButtons: true
   ShowWordCount: true
   ShowRssButtonInSectionTermList: true
   UseHugoToc: true
@@ -41,7 +41,7 @@ params:
   comments: false
   hidemeta: false
   hideSummary: false
-  showtoc: false
+  showtoc: true
   tocopen: false
 
   assets:
@@ -58,20 +58,20 @@ params:
     icon: /apple-touch-icon.png
     iconHeight: 35
 
-  # profile-mode
-  profileMode:
-    enabled: false # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
-    imageUrl: "<img location>"
-    imageWidth: 120
-    imageHeight: 120
-    imageTitle: my image
-    buttons:
-      - name: Posts
-        url: posts
-      - name: Tags
-        url: tags
+#  # profile-mode
+#  profileMode:
+#    enabled: false # needs to be explicitly set
+#    title: ExampleSite
+#    subtitle: "This is subtitle"
+#    imageUrl: "<img location>"
+#    imageWidth: 120
+#    imageHeight: 120
+#    imageTitle: my image
+#    buttons:
+#      - name: Posts
+#        url: posts
+#      - name: Tags
+#        url: tags
 
   # home-info mode
   homeInfoParams:
@@ -119,22 +119,26 @@ menu:
     - identifier: blog
       name: Blog
       url: /posts/
-      weight: 10
+      weight: 20
     #- identifier: categories
     #  name: Categories
     #  url: /categories/
     #  weight: 10
-    - identifier: tags
-      name: Tags
-      url: /tags/
-      weight: 20
     - identifier: publications
       name: Publications
       url: /publications/
-      weight: 30
+      weight: 20
     - identifier: series
       name: Series
       url: /series/
+      weight: 30
+    - identifier: tags
+      name: Tags
+      url: /tags/
+      weight: 30
+    - identifier: search
+      name: Search
+      url: /search/
       weight: 40
     #- identifier: example
     #  name: example.org
@@ -169,3 +173,9 @@ taxonomies:
 #  category: categories
   series: series
   tag: tags
+
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON # is necessary
